[package]
name = "rucd"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for browsing and searching the Unicode character
database.
"""
documentation = "https://github.com/BurntSushi/rucd"
homepage = "https://github.com/BurntSushi/rucd"
repository = "https://github.com/BurntSushi/rucd"
readme = "README.md"
keywords = ["unicode", "database", "character", "search", "fst"]
license = "Unlicense/MIT"

[dependencies]
clap = "2"
fst = "0.2"
regex = "0.2"

[profile.release]
debug = true
