[package]
name = "rucd"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line utility for browsing and searching the Unicode character
database.
"""
documentation = "https://github.com/BurntSushi/rucd"
homepage = "https://github.com/BurntSushi/rucd"
repository = "https://github.com/BurntSushi/rucd"
readme = "README.md"
keywords = ["unicode", "database", "character", "search", "fst"]
license = "Unlicense/MIT"

[dependencies]
byteorder = "1"
clap = "2"
fst = { version = "0.3", default-features = false }
lazy_static = "0.2"
regex = "0.2"
tabwriter = "1"
ucd-util = { version = "0.0.1", path = "ucd-util" }

[profile.release]
debug = true
codegen-units = 32
