[package]
publish = false
name = "ucd-generate"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A program for generating packed representations of the Unicode character
database that can be efficiently searched.
"""
documentation = "https://github.com/BurntSushi/rucd"
homepage = "https://github.com/BurntSushi/rucd"
repository = "https://github.com/BurntSushi/rucd"
readme = "README.md"
keywords = ["unicode", "database", "character", "search", "fst"]
license = "Unlicense/MIT"

[dependencies]
byteorder = "1"
clap = "2"
fst = { version = "0.3", default-features = false }
regex = "0.2"
ucd-parse = { version = "0.0.1", path = "../ucd-parse" }
ucd-trie = { version = "0.0.1", path = "../ucd-trie" }
ucd-util = { version = "0.0.1", path = "../ucd-util"  }

[dev-dependencies]
lazy_static = "0.2"
